Chnages to Question and Answer

--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Answers#index</h1>
+<h1>Answers Index</h1>
 
-<% @answers.each do |answer| %>
+<% @answer.each do |answer| %>
   <p> <%= answer.title %> </p>
   <p> <%= answer.text %> </p>
   <p> <%= answer.score %> </p>
