--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -4,6 +4,8 @@
 
 <% if @question.errors.any? %>
 <div>
+	<h2><%= pluralize( @question.errors.count, "error" ) %> prohibited this post from being saved.</h2>
+
 	<h2><%= pluralize( @pquestion.errors.count, "error" ) %> prohibited this post from being saved.</h2>
 	<ul>
 		<% @question.errors.full_messages.each do |msg| %>
@@ -13,26 +15,26 @@
 </div>
 <% end %>
 
-<div>
+<div class="form-group">
 	<%= f.label :title %>
 	<%= f.text_field :title %>
 </div>
-<div>
+<div class="form-group">
 	<%= f.label :text %>
-	<%= f.text_area :text %>
+	<%= f.text_area :text, rows: '10' %>
 </div>
-
-<div>
+<div class="form-group">
 	<%= f.label :value %>
-	<%= f.text_area :value%>
+	<%= f.text_area :value %>
 </div>
 
-<div>
-	<%= f.submit %>
+<div class="form-group">
+	<%= f.submit class: 'btn btn-primary' %>
 </div>
 	
 
 <% end %>
+
 
 
 <%= link_to 'Back', questions_path, class: 'btn btn-default' %>
