--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,10 +1,8 @@
-<h1>Edit Answers</h1>
-
 <%= form_for( @question, @answer ) do |f| %>
 
 <% if @answer.errors.any? %>
 <div>
-	<h2><%= pluralize( @answer.errors.count, "error" ) %> prohibited this post from being saved.</h2>
+	<h2><%= pluralize( @answer.errors.count, "error" ) %> prohibited this answer from being saved.</h2>
 	<ul>
 		<% @answer.errors.full_messages.each do |msg| %>
 		<li><%= msg %></li>
