--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -12,7 +12,10 @@
 			<td><%= link_to(question.title, question_path(question) ) %></td>
 			<td><%= question.text %></td>
 			<td><%= question.value %></td>
+			<td><%= link_to 'Destroy', question_path(question), class: 'btn btn-default', method: :delete, data: { confirm: 'Are you sure you want to delete question?'} %></td>
+			
 		</tr>
 		<% end %>
 	</table>
 	
+	<%= link_to 'Add Question', new_question_path, class: 'btn btn-primary' %>
