--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,6 +2,7 @@
 
 <% if @question.errors.any? %>
 <div>
+	<h2><%= pluralize( @question.errors.count, "error" ) %> prohibited this post from being saved.</h2>
 	<h2><%= pluralize( @pquestion.errors.count, "error" ) %> prohibited this post from being saved.</h2>
 	<ul>
 		<% @question.errors.full_messages.each do |msg| %>
@@ -11,22 +12,22 @@
 </div>
 <% end %>
 
-<div>
+<div class="form-group">
 	<%= f.label :title %>
-	<%= f.text_field :title %>
+	<%= f.text_field :title, class: 'form-control' %>
 </div>
-<div>
+<div class="form-group">
 	<%= f.label :text %>
-	<%= f.text_area :text %>
+	<%= f.text_area :text, class: 'form-control', rows: '12' %>
 </div>
-
-<div>
+<div class="form-group">
 	<%= f.label :value %>
-	<%= f.text_area :value%>
+	<%= f.text_area :value, class: 'form-control', rows: '1' %>
 </div>
 
-<div>
-	<%= f.submit %>
+<div class="form-group">
+	<%= f.submit class: 'btn btn-primary' %>
+
 </div>
 	
 
